--- a/views/layoutB.html
+++ b/views/layoutB.html
@@ -23,7 +23,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <!-- include stylesheets -->
-    <link rel="stylesheet" href="{{=URL('static','css/foundation.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap-theme.min.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/bootstrap-slider.css')}}"/>
@@ -31,7 +30,6 @@
     <link rel="stylesheet" href="{{=URL('static','css/web2py-bootstrap3.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/jquery-ui.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/mobile_view.css')}}"/>
-    <link rel="stylesheet" href="{{=URL('static','css/ui-grid-unstable.css')}}" type="text/css">
     <link rel="stylesheet" href="{{=URL('static','css/datepicker.css')}}"/>
     <link rel="stylesheet" href="{{=URL('static','css/athena.css')}}"/>
 
@@ -162,7 +160,7 @@
 
               <div class="deal col-md-3">
                 <h4 class="country">Europe</h4>
-                <div class="pic"><img src="{{=URL('static','images/Europe.jpg')}}"  alt="Europe" /></div>
+                <div class="pic"><img src="{{=URL('static','images/europe.jpg')}}"  alt="Europe" /></div>
                 <!-- <div class="buy4me_btn">Ship for Me!</div>  -->
               </div>
 
@@ -186,7 +184,7 @@
               
               <div class="deal col-md-3">
                 <h4 class="country">USA</h4>
-                <div class="pic"><img src="{{=URL('static','images/USA.jpg')}}"  alt="USA" /></div>
+                <div class="pic"><img src="{{=URL('static','images/usa.jpg')}}"  alt="USA" /></div>
                 <!-- <div class="buy4me_btn">Ship for Me!</div>  -->
               </div>
             </div>
@@ -237,8 +235,6 @@
     <script src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
     <script src="{{=URL('static','js/athena.js')}}"></script>
     <script src="{{=URL('static','js/bootstrap-slider.js')}}"></script>
-    <script src="{{=URL('static','js/app.js')}}"></script>
-    <script src="{{=URL('static','js/angular-animate.js')}}"></script>
 
     <!-- font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
