adjust size of visa pic

--- a/views/default/d3_4.html
+++ b/views/default/d3_4.html
@@ -25,7 +25,7 @@
             <tr style="border-top:1px solid #000000; font-weight:600"><td style="padding:10px; line-height:0.9">Total</td><td style="padding:10px; line-height:0.9">{{='$152.9' if request.args[0]=='B' else '$17.5'}}</td></tr>
         </table>
         <div class="col-md-3">
-            <span><img src="{{=URL('static','images/pay.png')}}"/></span>
+            <span><img style= "height:80px" src="{{=URL('static','images/pay.png')}}"/></span>
         </div>
     </div>
     <div class="row d3_flow_button">
